--- a/src/assets/scss/_page/navbar.scss
+++ b/src/assets/scss/_page/navbar.scss
@@ -712,7 +712,7 @@
 
 
 .mobile-navbar {
-  // max-width: var(--max-with-mobile);
+  max-width: var(--max-with-mobile);
 
   &.nav-child {
     background: #FFFFFF;
