--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,3 +1,454 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@font-face {
+  font-family: 'Aldo the Apache';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Aldo the Apache"), url("../fonts/AldotheApache.woff") format("woff"); }
+
+html {
+  --primary-color: #4E7FFF;
+  --max-with-mobile: 768px;
+  --max-with: 1920px;
+  --min-with: 1024px;
+  --default-font-size: 14px;
+  --default-small-font-size: 13px;
+  --default-padding-content: 20px;
+  --default-mobile-padding-content: 15px;
+  --bs-gutter-x: 20px;
+  --bs-gutter-y: 20px;
+  --bs-gutter-x-mobile: 15px;
+  --bs-gutter-y-mobile: 15px;
+  --bs-danger-rgb: 255, 0, 0; }
+
+html,
+body {
+  font-size: var(--default-font-size);
+  line-height: 16px;
+  font-weight: 300;
+  margin: auto;
+  font-family: 'Roboto', sans-serif;
+  min-height: 100vh;
+  position: relative;
+  scroll-behavior: smooth; }
+
+* {
+  outline: none; }
+
+img {
+  max-width: 100%; }
+
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  padding-right: var(--bs-gutter-x-mobile, 0.75rem);
+  padding-left: var(--bs-gutter-x-mobile, 0.75rem); }
+
+@media (min-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1230px !important; } }
+
+@media only screen and (max-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 100% !important;
+    padding-left: 15px !important;
+    padding-right: 15px !important; } }
+
+@media only screen and (max-width: 1200px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 100% !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important; } }
+
+@media only screen and (max-width: 1050px) {
+  html,
+  body {
+    overflow-x: hidden !important; }
+  .navbar-nav .dropdown-menu {
+    position: absolute !important; } }
+
+.form-control {
+  font-size: 14px;
+  line-height: 16px; }
+
+.btn {
+  border-radius: 10px;
+  min-width: 80px; }
+  .btn-primary {
+    background-color: #4E7FFF;
+    border-color: #4E7FFF; }
+    .btn-primary:disabled {
+      background-color: #597EF7;
+      border-color: #597EF7; }
+  .btn-outline-primary {
+    color: #4E7FFF;
+    border-color: #4E7FFF; }
+
+.text-primary {
+  color: #597EF7; }
+
+.text-title {
+  background: linear-gradient(38.14deg, #C9AF92 47.15%, #E5D6C3 89.33%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  text-align: center; }
+
+.main {
+  padding-top: 120px;
+  padding-bottom: 80px;
+  min-height: 100vh; }
+  @media only screen and (max-width: 992px) {
+    .main {
+      padding-top: 50px;
+      padding-bottom: 50px !important; } }
+
+a {
+  color: #597EF7;
+  text-decoration: none; }
+
+.modal.modal-custom .modal-content {
+  border-radius: 20px;
+  border: none; }
+  .modal.modal-custom .modal-content .modal-header {
+    text-align: center;
+    padding: 30px;
+    border-bottom: none; }
+    .modal.modal-custom .modal-content .modal-header h5 {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 14px;
+      color: #333333; }
+  .modal.modal-custom .modal-content .modal-body {
+    padding: 35px 40px; }
+    .modal.modal-custom .modal-content .modal-body ul {
+      list-style: decimal; }
+      .modal.modal-custom .modal-content .modal-body ul li {
+        margin-bottom: 15px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+        color: #000000; }
+
+.modal.slide-up {
+  top: auto;
+  bottom: 0;
+  margin: 0; }
+  .modal.slide-up.show .modal-dialog {
+    transform: none !important; }
+  .modal.slide-up.fade .modal-dialog {
+    -webkit-transform: translate(0, 100vh);
+    -ms-transform: translate(0, 100vh);
+    -o-transform: translate(0, 100vh);
+    transform: translate(0, 100vh);
+    display: flex;
+    align-items: flex-end;
+    margin: auto;
+    height: 100%; }
+    .modal.slide-up.fade .modal-dialog .modal-content {
+      border-radius: 20px 20px 0px 0px;
+      height: 80vh; }
+      .modal.slide-up.fade .modal-dialog .modal-content .modal-header {
+        border-bottom: 10px solid #f2f2f2;
+        display: flex;
+        place-content: space-between;
+        place-items: center;
+        min-height: 70px; }
+        .modal.slide-up.fade .modal-dialog .modal-content .modal-header a {
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 14px; }
+        .modal.slide-up.fade .modal-dialog .modal-content .modal-header h5 {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 19px;
+          text-align: center;
+          color: #000000;
+          margin: 0; }
+
+.modal.slide-up-notification {
+  top: auto;
+  bottom: 0;
+  margin: 0;
+  padding: 0; }
+  .modal.slide-up-notification.show .modal-dialog {
+    transform: none !important;
+    max-width: initial !important; }
+    .modal.slide-up-notification.show .modal-dialog .modal-content {
+      height: initial !important;
+      padding: 30px; }
+  .modal.slide-up-notification.fade .modal-dialog {
+    -webkit-transform: translate(0, 100vh);
+    -ms-transform: translate(0, 100vh);
+    -o-transform: translate(0, 100vh);
+    transform: translate(0, 100vh);
+    display: flex;
+    align-items: flex-end;
+    margin: auto;
+    height: 100%; }
+    .modal.slide-up-notification.fade .modal-dialog .modal-content {
+      border-radius: 20px 20px 0px 0px;
+      height: initial !important; }
+      .modal.slide-up-notification.fade .modal-dialog .modal-content .modal-header {
+        border-bottom: 10px solid #f2f2f2;
+        display: flex;
+        place-content: space-between;
+        place-items: center;
+        min-height: 70px; }
+        .modal.slide-up-notification.fade .modal-dialog .modal-content .modal-header a {
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 14px; }
+        .modal.slide-up-notification.fade .modal-dialog .modal-content .modal-header h5 {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 19px;
+          text-align: center;
+          color: #000000;
+          margin: 0; }
+      .modal.slide-up-notification.fade .modal-dialog .modal-content .btn {
+        width: 100%; }
+
+.modal.alert .modal-dialog {
+  max-width: 700px;
+  margin: auto; }
+  .modal.alert .modal-dialog .modal-content {
+    border-radius: 20px;
+    padding: 80px 30px; }
+    .modal.alert .modal-dialog .modal-content .modal-body {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 20px;
+      text-align: center;
+      color: #000000; }
+      .modal.alert .modal-dialog .modal-content .modal-body h5 {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 14px;
+        text-align: center;
+        color: #000000; }
+      .modal.alert .modal-dialog .modal-content .modal-body .btn {
+        height: 50px;
+        display: flex;
+        place-content: center;
+        place-items: center;
+        min-width: 450px;
+        margin: auto;
+        margin-top: 50px;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 16px;
+        text-align: center;
+        color: #FFFFFF; }
+
+.modal.copymodal .modal-dialog {
+  max-width: 400px;
+  margin: auto; }
+  .modal.copymodal .modal-dialog .modal-content {
+    border-radius: 20px;
+    padding: 30px 30px; }
+    .modal.copymodal .modal-dialog .modal-content .modal-body {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 20px;
+      text-align: center;
+      color: #000000; }
+      .modal.copymodal .modal-dialog .modal-content .modal-body h5 {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 14px;
+        text-align: center;
+        color: #000000; }
+      .modal.copymodal .modal-dialog .modal-content .modal-body .btn {
+        height: 50px;
+        display: flex;
+        place-content: center;
+        place-items: center;
+        min-width: 100%;
+        margin: auto;
+        margin-top: 50px;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 16px;
+        text-align: center;
+        color: #FFFFFF; }
+
+.paginations {
+  text-align: center; }
+  .paginations__item {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #000000;
+    border: 1px solid #878EA6;
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 30px;
+    min-width: 30px;
+    height: 30px;
+    padding: 0;
+    margin: 0 2px; }
+    .paginations__item img {
+      height: 15px; }
+    .paginations__item.active, .paginations__item:hover {
+      opacity: 0.7;
+      border: 1px solid #597EF7; }
+
+#liveAlertPlaceholder .alert {
+  position: fixed;
+  right: 15px;
+  top: 15px;
+  z-index: 9999; }
+
+span.input-group-text[data-i18n="To"] {
+  padding-left: 2px;
+  padding-right: 2px; }
+
+.spin {
+  animation-name: spin;
+  animation-duration: 5000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+#mySidenav.sidenav {
+  width: 100%;
+  position: fixed;
+  z-index: 1035;
+  top: 0;
+  bottom: 0;
+  left: -500%;
+  overflow-x: hidden;
+  transition: 0.5s;
+  display: flex;
+  max-width: var(--max-with-mobile); }
+  #mySidenav.sidenav .left-nav {
+    width: 75%;
+    background-color: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    place-content: space-between;
+    max-width: 300px;
+    min-width: 300px;
+    overflow: auto; }
+    #mySidenav.sidenav .left-nav__top__info {
+      background-image: url(../images/menu-bg.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 20px 15px;
+      display: flex;
+      place-content: center;
+      place-items: center;
+      gap: 15px;
+      color: #fff; }
+      #mySidenav.sidenav .left-nav__top__info__user-info {
+        color: #fff; }
+      #mySidenav.sidenav .left-nav__top__info__avatar {
+        max-width: 80px; }
+      #mySidenav.sidenav .left-nav__top__info h3 {
+        font-style: normal;
+        font-size: 20px;
+        line-height: 14px;
+        border-bottom: 1px solid #FFFFFF;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        padding-top: 5px;
+        font-weight: 300; }
+      #mySidenav.sidenav .left-nav__top__info p {
+        font-size: 12px;
+        line-height: 14px;
+        margin-bottom: 5px; }
+      #mySidenav.sidenav .left-nav__top__info div {
+        font-style: normal;
+        font-size: 18px;
+        line-height: 14px; }
+    #mySidenav.sidenav .left-nav__top__nav {
+      padding: 15px;
+      list-style: none; }
+      #mySidenav.sidenav .left-nav__top__nav__item a {
+        position: relative;
+        display: flex;
+        place-items: center;
+        gap: 15px;
+        text-decoration: none; }
+        #mySidenav.sidenav .left-nav__top__nav__item a div {
+          text-align: center;
+          width: 30px; }
+          #mySidenav.sidenav .left-nav__top__nav__item a div img {
+            max-width: 25px;
+            max-height: 25px; }
+        #mySidenav.sidenav .left-nav__top__nav__item a span {
+          width: 100%;
+          border-bottom: 1px solid #7F7F7F;
+          padding: 15px 0;
+          font-style: normal;
+          font-size: 14px;
+          line-height: 14px;
+          color: #000000; }
+        #mySidenav.sidenav .left-nav__top__nav__item a .badge {
+          position: absolute;
+          right: 0; }
+    #mySidenav.sidenav .left-nav__bottom__follow-us {
+      text-align: center; }
+      #mySidenav.sidenav .left-nav__bottom__follow-us div {
+        padding: 15px; }
+        #mySidenav.sidenav .left-nav__bottom__follow-us div img {
+          max-width: 30px;
+          max-height: 30px;
+          margin: 0 10px; }
+      #mySidenav.sidenav .left-nav__bottom__follow-us span {
+        font-style: normal;
+        font-size: 14px;
+        line-height: 14px;
+        color: #000000; }
+    #mySidenav.sidenav .left-nav__bottom__logout {
+      border-top: 1px solid #7F7F7F;
+      text-align: center;
+      padding: 15px;
+      font-style: normal;
+      font-size: 14px;
+      line-height: 14px; }
+      #mySidenav.sidenav .left-nav__bottom__logout a {
+        color: #000000;
+        text-decoration: none; }
+      #mySidenav.sidenav .left-nav__bottom__logout img {
+        margin-right: 15px;
+        max-width: 20px; }
+  #mySidenav.sidenav .backdrop {
+    transition: 1s;
+    background: rgba(0, 0, 0, 0.3);
+    height: 100%;
+    width: inherit; }
+  #mySidenav.sidenav.active {
+    left: 0; }
+
 .my-navbar__main {
   top: 35px;
   min-height: 80px;
@@ -1351,3 +1802,109 @@
     padding: 5px; }
     .event-icon .btn-close:focus, .event-icon .btn-close:active {
       box-shadow: none !important; }
+
+.event-block {
+  padding-bottom: 0;
+  max-width: 768px;
+  margin: auto;
+  padding-top: 10px;
+  margin-top: 50px; }
+  .event-block__content {
+    padding: 30px 25px;
+    position: relative; }
+  .event-block .block-content {
+    border-radius: 20px;
+    background: #fff;
+    border: 1px solid #e0e7fa;
+    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    margin-bottom: 30px;
+    height: 100%; }
+    @media only screen and (max-width: 576px) {
+      .event-block .block-content {
+        padding: 15px; } }
+    .event-block .block-content.text h3 {
+      color: #fcb33c;
+      text-transform: uppercase;
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 20px; }
+    .event-block .block-content.text .title {
+      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 18px; }
+
+#selectLanguage .modal-dialog {
+  padding: 0 30px;
+  margin: auto; }
+  #selectLanguage .modal-dialog .modal-content {
+    border-radius: 20px;
+    border: none;
+    overflow: hidden; }
+    #selectLanguage .modal-dialog .modal-content .modal-header {
+      background: linear-gradient(90deg, #88A8F7 0%, #A49AF2 100%);
+      padding: 15px; }
+      #selectLanguage .modal-dialog .modal-content .modal-header h5 {
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        color: #FFFFFF; }
+      #selectLanguage .modal-dialog .modal-content .modal-header .btn-close {
+        background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFF'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat; }
+    #selectLanguage .modal-dialog .modal-content .modal-body {
+      padding-top: 30px;
+      padding-bottom: 30px; }
+      #selectLanguage .modal-dialog .modal-content .modal-body img {
+        max-width: 40px; }
+      #selectLanguage .modal-dialog .modal-content .modal-body .choose-language {
+        word-break: keep-all; }
+      #selectLanguage .modal-dialog .modal-content .modal-body .title {
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        color: #000000;
+        margin-top: 7px; }
+      #selectLanguage .modal-dialog .modal-content .modal-body .subtitle {
+        display: flex;
+        place-items: center;
+        place-content: space-between;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        color: #000000;
+        padding-bottom: 25px; }
+
+.back-to-top {
+  margin-top: 20px;
+  padding: 20px;
+  text-align: center;
+  display: flex; }
+  .back-to-top a {
+    background: #fff;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    margin: auto;
+    flex-direction: column;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #7E8796;
+    min-width: 130px;
+    border-radius: 50px;
+    -webkit-box-shadow: 0px 4px 10px 2px rgba(1, 1, 1, 0.1);
+    box-shadow: 0px 4px 10px 2px rgba(1, 1, 1, 0.1); }
+
+html[lang="zh"] .register_link {
+  place-items: center !important; }
+  html[lang="zh"] .register_link span {
+    transform: rotate(-180deg) !important;
+    -webkit-transform: rotate(180deg) !important; }
+
+@media only screen and (max-width: 380px) {
+  .dropdown-menu .btn {
+    min-width: 50px !important; } }
