--- a/src/components/base/header-mobile.html
+++ b/src/components/base/header-mobile.html
@@ -15,5 +15,5 @@
     crossorigin="anonymous"
   />
 
-  <link rel="stylesheet" type="text/css" href="assets/css/desktop.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/mobile.css" />
 </head>
