--- a/src/components/how-to-play-modal.html
+++ b/src/components/how-to-play-modal.html
@@ -3,29 +3,29 @@
     <div class="modal-content">
       <div class="modal-content-all">
         <div class="modal-header">
-          <span class="modal-header__title" data-i18n="world_up_page.how_to_play_title"></span>
+          <span class="modal-header__title" data-i18n="event_page.how_to_play_title"></span>
         </div>
         <div class="modal-body">
           <div class="row steps">
             <div class="col-12 col-lg-4">
               <div class="steps__item">
-                <span class="steps__item__title" data-i18n="world_up_page.how_to_play_step1__title"></span>
+                <span class="steps__item__title" data-i18n="event_page.how_to_play_step1__title"></span>
                 <img class="steps__item__img" src="assets/images/world-cup/Login.png" />
-                <div class="steps__item__description" data-i18n="world_up_page.how_to_play_step1__description"></div>
+                <div class="steps__item__description" data-i18n="event_page.how_to_play_step1__description"></div>
               </div>
             </div>
             <div class="col-12 col-lg-4">
               <div class="steps__item">
-                <span class="steps__item__title" data-i18n="world_up_page.how_to_play_step2__title"></span>
+                <span class="steps__item__title" data-i18n="event_page.how_to_play_step2__title"></span>
                 <img class="steps__item__img" src="assets/images/world-cup/Ticket.png" />
-                <div class="steps__item__description" data-i18n="world_up_page.how_to_play_step2__description"></div>
+                <div class="steps__item__description" data-i18n="event_page.how_to_play_step2__description"></div>
               </div>
             </div>
             <div class="col-12 col-lg-4">
               <div class="steps__item">
-                <span class="steps__item__title" data-i18n="world_up_page.how_to_play_step3__title"></span>
+                <span class="steps__item__title" data-i18n="event_page.how_to_play_step3__title"></span>
                 <img class="steps__item__img" src="assets/images/world-cup/Money.png" />
-                <div class="steps__item__description" data-i18n="world_up_page.how_to_play_step3__description"></div>
+                <div class="steps__item__description" data-i18n="event_page.how_to_play_step3__description"></div>
               </div>
             </div>
           </div>
