--- a/assets/css/_page/event.css
+++ b/assets/css/_page/event.css
@@ -254,14 +254,10 @@
             border-bottom: none;
             vertical-align: middle; }
   .event-page__container .play-now {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../images/world-cup/en/bg_loading_bonus.jpg);
-    background-position: center;
     position: relative;
-    border: 3px solid #cf3c66;
     border-radius: 8px;
-    min-height: 500px; }
+    min-height: 500px;
+    cursor: pointer; }
     @media only screen and (max-width: 768px) {
       .event-page__container .play-now {
         min-height: 300px; } }
@@ -271,71 +267,11 @@
     @media only screen and (max-width: 426px) {
       .event-page__container .play-now {
         min-height: 200px; } }
-    .event-page__container .play-now > div {
-      background-color: rgba(0, 0, 0, 0.7);
-      content: "";
+    .event-page__container .play-now img {
+      border-radius: 8px;
+      object-fit: cover;
       width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      top: 0; }
-    .event-page__container .play-now__ticker_remaining {
-      position: absolute;
-      left: 30px;
-      top: 15px;
-      background-image: url(../images/world-cup/en/BAR_Ticket_Remaining.png);
-      min-width: 290px;
-      min-height: 50px;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-      display: flex;
-      place-items: center;
-      place-content: space-around; }
-      .event-page__container .play-now__ticker_remaining .text {
-        font-size: 20px;
-        font-weight: 400; }
-      .event-page__container .play-now__ticker_remaining .number {
-        padding-right: 25px;
-        font-size: 20px;
-        font-weight: 600;
-        color: #fff; }
-      @media only screen and (max-width: 768px) {
-        .event-page__container .play-now__ticker_remaining {
-          display: none; } }
-    .event-page__container .play-now__world-cup-logo {
-      width: 100px;
-      right: 30px;
-      top: 15px;
-      position: absolute; }
-      @media only screen and (max-width: 768px) {
-        .event-page__container .play-now__world-cup-logo {
-          display: none; } }
-    .event-page__container .play-now__tap-to-play {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      place-content: center;
-      place-items: center;
-      flex-direction: column;
-      gap: 15px;
-      font-size: 20px;
-      font-weight: 600;
-      color: #fff;
-      text-transform: uppercase; }
-      @media only screen and (max-width: 426px) {
-        .event-page__container .play-now__tap-to-play {
-          font-size: 18px; } }
-      .event-page__container .play-now__tap-to-play img {
-        max-width: 90px; }
-        .event-page__container .play-now__tap-to-play img:hover {
-          opacity: 0.8; }
-        @media only screen and (max-width: 426px) {
-          .event-page__container .play-now__tap-to-play img {
-            max-width: 50px; } }
+      height: 100%; }
   .event-page__container__how-to-play-img {
     width: 100%;
     border: 3px solid #cf3c66;
