--- a/src/assets/scss/_page/event.scss
+++ b/src/assets/scss/_page/event.scss
@@ -16,6 +16,7 @@
         object-fit: cover;
       }
     }
+
     @media only screen and (max-width: 768px) {
       padding: 0 15px;
     }
@@ -387,14 +388,10 @@
     }
 
     .play-now {
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-image: url(../images/world-cup/en/bg_loading_bonus.jpg);
-      background-position: center;
       position: relative;
-      border: 3px solid #cf3c66;
       border-radius: 8px;
       min-height: 500px;
+      cursor: pointer;
 
       @media only screen and (max-width: 768px) {
         min-height: 300px;
@@ -408,90 +405,11 @@
         min-height: 200px;
       }
 
-      &>div {
-        background-color: rgba(0, 0, 0, 0.7);
-        content: "";
+      img {
+        border-radius: 8px;
+        object-fit: cover;
         width: 100%;
         height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-      }
-
-      &__ticker_remaining {
-        position: absolute;
-        left: 30px;
-        top: 15px;
-        background-image: url(../images/world-cup/en/BAR_Ticket_Remaining.png);
-        min-width: 290px;
-        min-height: 50px;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        display: flex;
-        place-items: center;
-        place-content: space-around;
-
-        .text {
-          font-size: 20px;
-          font-weight: 400;
-        }
-
-        .number {
-          padding-right: 25px;
-          font-size: 20px;
-          font-weight: 600;
-          color: #fff;
-        }
-
-        @media only screen and (max-width: 768px) {
-          display: none;
-        }
-      }
-
-      &__world-cup-logo {
-        width: 100px;
-        right: 30px;
-        top: 15px;
-        position: absolute;
-
-        @media only screen and (max-width: 768px) {
-          display: none;
-        }
-      }
-
-      &__tap-to-play {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        place-content: center;
-        place-items: center;
-        flex-direction: column;
-        gap: 15px;
-
-        font-size: 20px;
-        font-weight: 600;
-        color: #fff;
-        text-transform: uppercase;
-
-        @media only screen and (max-width: 426px) {
-          font-size: 18px;
-        }
-
-        img {
-          max-width: 90px;
-
-          &:hover {
-            opacity: 0.8;
-          }
-
-          @media only screen and (max-width: 426px) {
-            max-width: 50px;
-          }
-        }
       }
     }
 
