--- a/src/components/content.html
+++ b/src/components/content.html
@@ -1,31 +1,21 @@
 <div class="block-content text-center">
   <div class="play-now">
-    <div>
-      <div class="play-now__ticker_remaining">
-        <span class="text" data-i18n="world_up_page.ticket_remaining"></span>
-        <span class="number">9</span>
-      </div>
-      <img class="play-now__world-cup-logo" src="assets/images/world-cup/en/c4639855e84f992b7dbed318972b86fd.png" />    
-      <a href="#" class="play-now__tap-to-play">
-        <img src="assets/images/world-cup/en/tap.png" />    
-        <span data-i18n="world_up_page.Tap_to_play_now"></span>
-      </a>
-    </div>
+    <img src="assets/images/new-year/event-game.png" />
   </div>
   <!-- <img class="event-page__container__how-to-play-img" src="assets/images/how-to-play.png" /> -->
-  <button data-bs-toggle="modal" data-bs-target="#howToPlayModal" class="btn btn-primary event-page__container__how-to-play-btn" data-i18n="world_up_page.how_to_play"></button>
+  <button data-bs-toggle="modal" data-bs-target="#howToPlayModal" class="btn btn-primary event-page__container__how-to-play-btn" data-i18n="event_page.how_to_play"></button>
 </div>
 <div class="row">
   <div class="col-lg-6 col-12 mb-4">
     <div class="block-content text-center">
       <div class="event-page__container__block_content">
-        <span class="event-page__container__block_content__title" data-i18n="world_up_page.YOUR_PRIZE_HISTORY"></span>
+        <span class="event-page__container__block_content__title" data-i18n="event_page.YOUR_PRIZE_HISTORY"></span>
         <div class="event-page__container__block_content__table table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th width="50%" data-i18n="world_up_page.Date"></th>
-                <th width="50%" data-i18n="world_up_page.Realbet"></th>
+                <th width="50%" data-i18n="event_page.Date"></th>
+                <th width="50%" data-i18n="event_page.Realbet"></th>
               </tr>
             </thead>
             <tbody>
@@ -73,7 +63,7 @@
           </table>
           <div class="px-4">
             <a href="#" class="table-footer">
-              <span data-i18n="world_up_page.next"></span>
+              <span data-i18n="event_page.next"></span>
               <img src="assets/icons/right.png" />
             </a>
           </div>
@@ -84,20 +74,20 @@
   <div class="col-lg-6 col-12 mb-4">
     <div class="block-content text">
       <div class="event-page__container__block_content p-4 pb-0">
-        <h3 data-i18n="world_up_page.PENALTY_KICKS_MINI_GAMES_T_C"></h3>
-        <p data-i18n="world_up_page.PENALTY_KICKS_MINI_GAMES_T_C__description"></p>
-        <div class="title" data-i18n="world_up_page.How_to_Claim"></div>
-        <p data-i18n="world_up_page.How_to_Claim__description"></p>
-        <div class="title" data-i18n="world_up_page.Rules"></div>
-        <p data-i18n="world_up_page.Rules__description1"></p>
-        <p data-i18n="world_up_page.Rules__description2"></p>
-        <p data-i18n="world_up_page.Rules__description3"></p>
-        <p data-i18n="world_up_page.Rules__description4"></p>
-        <p data-i18n="world_up_page.Rules__description5"></p>
-        <p data-i18n="world_up_page.Rules__description6"></p>
-        <p data-i18n="world_up_page.Rules__description7"></p>
-        <p data-i18n="world_up_page.Rules__description8"></p>
-        <p data-i18n="world_up_page.Rules__description9"></p>
+        <h3 data-i18n="event_page.title"></h3>
+        <p data-i18n="event_page.description"></p>
+        <div class="title" data-i18n="event_page.How_to_Claim"></div>
+        <p data-i18n="event_page.How_to_Claim__description"></p>
+        <div class="title" data-i18n="event_page.Rules"></div>
+        <p data-i18n="event_page.Rules__description1"></p>
+        <p data-i18n="event_page.Rules__description2"></p>
+        <p data-i18n="event_page.Rules__description3"></p>
+        <p data-i18n="event_page.Rules__description4"></p>
+        <p data-i18n="event_page.Rules__description5"></p>
+        <p data-i18n="event_page.Rules__description6"></p>
+        <p data-i18n="event_page.Rules__description7"></p>
+        <p data-i18n="event_page.Rules__description8"></p>
+        <p data-i18n="event_page.Rules__description9"></p>
       </div>
     </div>
   </div>
