--- a/src/assets/scss/_page/event.scss
+++ b/src/assets/scss/_page/event.scss
@@ -111,7 +111,7 @@
       line-height: 25px;
 
       @media only screen and (max-width: 768px) {
-        background-repeat: cover;
+        background-size: cover;
       }
 
       p {
