--- a/assets/css/_page/event.css
+++ b/assets/css/_page/event.css
@@ -76,6 +76,9 @@
     background-position: top;
     font-size: 14px;
     line-height: 25px; }
+    @media only screen and (max-width: 768px) {
+      .event-page__container__block_content {
+        background-size: cover; } }
     .event-page__container__block_content p {
       margin-bottom: 10px;
       line-height: 20px;
