--- a/src/components/base/footer.html
+++ b/src/components/base/footer.html
@@ -1,8 +1,4 @@
-<script
-  src="assets/library/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script src="assets/library/translator.min.js" defer></script>
 <!-- Bootstrap Bundle with Popper -->
 <script
