--- a/src/components/base/select-language-modal.html
+++ b/src/components/base/select-language-modal.html
@@ -27,8 +27,8 @@
             <div class="title" data-i18n="universal_page.Singapore"></div>
           </div>
           <div class="col-8 subtitle justify-content-start gap-2">
-            <span class="choose-language" data-language="EN" data-region="Singapore">English</span> |
-            <span class="choose-language" data-language="ZH" data-region="Singapore">中文</span>
+            <span class="choose-language" data-language="EN_SGD" data-region="Singapore">English</span> |
+            <span class="choose-language" data-language="ZH_SGD" data-region="Singapore">中文</span>
           </div>
         </div>
 
