--- a/src/components/content.html
+++ b/src/components/content.html
@@ -21,43 +21,43 @@
             <tbody>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
               <tr>
                 <td>15/7/2022</td>
-                <td>SGD 5,000</td>
+                <td><span data-i18n="event_page.price_format"></span> 5,000</td>
               </tr>
             </tbody>
           </table>
